# clip-layerwise-alignment

./: .gitignore  Makefile  README.md  pyproject.toml
clip_layerwise_alignment/: __init__.py  config.py
clip_layerwise_alignment/colab/: __init__.py  colab.py
clip_layerwise_alignment/tasks/download_data/: __init__.py  __main__.py  config.yaml  download_data.py  types.py
clip_layerwise_alignment/utils/: __init__.py  model.py  yaml_config.py
clip_layerwise_alignments/: __init__.py
clip_layerwise_alignments/colab/: colab.py
docs/: mkdocs.yml
docs/docs/: index.md
models/projections/: text_L10_image_final.pt  text_L10_image_final_history.json  text_L11_image_final.pt  text_L11_image_final_history.json  text_L12_image_final.pt  text_L12_image_final_history.json  text_L1_image_final.pt  text_L1_image_final_history.json  text_L2_image_final.pt  text_L2_image_final_history.json  text_L3_image_final.pt  text_L3_image_final_history.json  text_L4_image_final.pt  text_L4_image_final_history.json  text_L5_image_final.pt  text_L5_image_final_history.json  text_L6_image_final.pt  text_L6_image_final_history.json  text_L7_image_final.pt  text_L7_image_final_history.json  text_L8_image_final.pt  text_L8_image_final_history.json  text_L9_image_final.pt  text_L9_image_final_history.json  text_final_image_L1.pt  text_final_image_L10.pt  text_final_image_L10_history.json  text_final_image_L11.pt  text_final_image_L11_history.json  text_final_image_L12.pt  text_final_image_L12_history.json  text_final_image_L1_history.json  text_final_image_L2.pt  text_final_image_L2_history.json  text_final_image_L3.pt  text_final_image_L3_history.json  text_final_image_L4.pt  text_final_image_L4_history.json  text_final_image_L5.pt  text_final_image_L5_history.json  (+8 more)
notebooks/: test_loss_box_plot.ipynb  test_retrieval_box_plot.ipynb  test_similarities_distribution_plot.ipynb  training_loss_curves_plot.ipynb
notebooks/colab/: extract_features.ipynb
(+29 files in other folders)
